# poorjit

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  poorjit.pc.in  poorjitConfig.cmake.in
include/: poorjit.h
src/: poorjit.cc  poorjit_version.h.in
test/: CMakeLists.txt  GTestCMakeLists.txt.in  test_poorjit.cc
